force.com/CALM/src/objects/SweptSessionAttribute__c.object
<CustomObject>
    <fields>
        <fullName>at__c</fullName>
        <description>Type of the attribute. &apos;dma&apos; for Device Manufacturer, for example.</description>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>dov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv_</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>av_</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dlc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>du_</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dmo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nca</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n__c</fullName>
        <description>Name of the session attribute. For example, if the attribute type was &apos;dma&apos; for Device Manufacturer, the name could be something such as &quot;HTC&quot; or &quot;Motorola&quot;.</description>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc__c</fullName>
        <description>Number of sessions with this session attribute</description>
        <label>Session Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>swp__c</fullName>
        <label>Sweeper</label>
        <referenceTo>Sweeper__c</referenceTo>
        <relationshipName>sattr</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>uc__c</fullName>
        <description>Number of users with the given session attribute.</description>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Swept Session Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>n__c</columns>
        <columns>sc__c</columns>
        <columns>uc__c</columns>
        <columns>swp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Swept Session Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swept Session Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>